--- a/mask.ipynb
+++ b/mask.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO8DnHfROltgK+fESX6P5jg",
+      "authorship_tag": "ABX9TyOG38WfYh15rk9pjPnHzoZh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,7 +47,7 @@
       "metadata": {
         "id": "xBs48AxC6CH-"
       },
-      "execution_count": null,
+      "execution_count": 56,
       "outputs": []
     },
     {
@@ -76,9 +76,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2jUJf8-Z7eB1",
-        "outputId": "ab116303-2814-4029-ea1d-aba7af554447"
+        "outputId": "17a7fc3e-aef1-4c41-86af-46cf7d4264d3"
       },
-      "execution_count": 44,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "stream",
@@ -108,7 +108,7 @@
         "    mask_count[conunty] += mask_adult_count\n",
         "\n",
         "# 將結果從大到小排列\n",
-        "med_count = dict(sorted(med_count.items(), key=lambda item: item[1]))\n",
+        "mask_count = dict(sorted(mask_count.items(), key=lambda item: item[1]))\n",
         "\n",
         "print(mask_count)\n",
         "# {'台北市': 12345, '新北市': 45678 ...}"
@@ -118,15 +118,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dAZe2CqoGK-U",
-        "outputId": "e15c373c-2eb6-473a-df1e-dd047deaac60"
+        "outputId": "b2f0e782-01f6-4689-f030-d99be368d90e"
       },
-      "execution_count": 48,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "{'臺北市': 323660, '高雄市': 428940, '臺中市': 556440, '臺南市': 408400, '基隆市': 80100, '新竹市': 45630, '嘉義市': 107840, '新北市': 677660, '桃園市': 345600, '新竹縣': 53760, '宜蘭縣': 106900, '苗栗縣': 134180, '彰化縣': 219400, '南投縣': 91240, '雲林縣': 199470, '嘉義縣': 113180, '屏東縣': 184250, '澎湖縣': 12600, '花蓮縣': 57330, '臺東縣': 28510, '金門縣': 15510, '連江縣': 7930}\n"
+            "{'連江縣': 7930, '澎湖縣': 12600, '金門縣': 15510, '臺東縣': 28510, '新竹市': 45630, '新竹縣': 53760, '花蓮縣': 57330, '基隆市': 80100, '南投縣': 91240, '宜蘭縣': 106900, '嘉義市': 107840, '嘉義縣': 113180, '苗栗縣': 134180, '屏東縣': 184250, '雲林縣': 199470, '彰化縣': 219400, '臺北市': 323660, '桃園市': 345600, '臺南市': 408400, '高雄市': 428940, '臺中市': 556440, '新北市': 677660}\n"
           ]
         }
       ]
